# melee-rust

./: .env  Cargo.toml  Dockerfile  compose.yaml  rocket.toml  run.sh
.devcontainer/: devcontainer.json
deployment/database/: database.yaml  deployment.yaml  grant.yaml  user.yaml
deployment/melee-backend/: deployment.yaml  ingress.yaml  service.yaml
migrations/2024-03-16-223209_create_combatants/: down.sql  up.sql
scripts/: build.sh  deploy.sh  install.sh
src/: main.rs  models.rs  schema.rs
