[package]
name = "melee_server"
version = "0.1.0"
authors = ["Douglas Linsmeyer <douglinsmeyer@gmail.com> "]
edition = "2021"

[dependencies]
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15"